# TO_DELETE_gui-vizkit3d_tastemodels

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  manifest.xml
.gitfilters/: README.txt  repolabels-clean.awk  repolabels-smudge.awk
aadl/: export_vizkit_BodyState.aadl  export_vizkit_DepthMap.aadl  export_vizkit_LaserScan.aadl  export_vizkit_MotionCommand.aadl  export_vizkit_Pointcloud.aadl  export_vizkit_SonarBeam.aadl  export_vizkit_Waypoint.aadl  vizkit_RigidBodyState.aadl
export/: CMakeLists.txt  compileAllASN.sh  vizkit_DataView.aadl
model_bodystate/: DeploymentView.aadl  InterfaceView.aadl  InterfaceView.md5  build-script.sh  copy-exports.sh  export_vizkit_RigidBodyState.aadl  make-links.sh  run-test.sh  stim300.stl  system_config.h  user_init_pre.sh
model_range/: DeploymentView.aadl  InterfaceView.aadl  InterfaceView.md5  build-script.sh  copy-exports.sh  make-links.sh  sonar_beam.data  system_config.h  user_init_pre.sh
model_robot/: DeploymentView.aadl  InterfaceView.aadl  InterfaceView.md5  build-script.sh  collect-covarage.sh  copy-exports.sh  export_vizkit_Robot.aadl  make-links.sh  system_config.h  user_init_post.sh  user_init_pre.sh
model_trajectory/: DeploymentView.aadl  InterfaceView.aadl  build-script.sh  copy-exports.sh  export_vizkit_Trajectory.aadl  make-links.sh
scripts/: build-functions.sh  install.sh  open-coverage-report.sh  run-tests.sh  update-data-view.sh
src/: CMakeLists.txt  VizkitInstance.cpp  bodyStatePluginWrapper.cpp  depthMapPluginWrapper.cpp  motionCommandPluginWrapper.cpp  pointcloudPluginWrapper.cpp  (+4 more)
(+172 files in other folders)
