install(FILES
    export_vizkit_BodyState.aadl
    export_vizkit_DepthMap.aadl
    export_vizkit_LaserScan.aadl
    export_vizkit_MotionCommand.aadl
    export_vizkit_Pointcloud.aadl
    export_vizkit_RigidBodyState.aadl
    export_vizkit_SonarBeam.aadl
    export_vizkit_Trajectory.aadl
    export_vizkit_Waypoint.aadl
    vizkit_DataView.aadl
    vizkit_RigidBodyState.aadl
    DESTINATION share/taste/vizkit3d)

